CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET (CMAKE_CXX_STANDARD 17)

AUX_SOURCE_DIRECTORY(./ SRC)
ADD_LIBRARY(base_log STATIC ${SRC})

# FIND_PACKAGE(Boost 1.54.0 QUIET COMPONENTS log_setup log thread filesystem)
FIND_PACKAGE(GLOG QUIET)

# IF(Boost_FOUND)

#     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
#     LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

#     TARGET_LINK_LIBRARIES(base_log ${Boost_LIBRARIES})

# ELSE(Boost_FOUND)

#     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../boost/log/include)
#     LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../boost/log/lib)

#     TARGET_LINK_LIBRARIES(base_log libboost_log_setup.a libboost_log.a libboost_thread.a libboost_filesystem.a)

# ENDIF(Boost_FOUND)

IF(GLOG_FOUND)

    TARGET_LINK_LIBRARIES(base_log glog::glog)

ELSE(GLOG_FOUND)

    MESSAGE(STATUS "not found glog")
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../glog/include)
    LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../glog/lib)

    TARGET_LINK_LIBRARIES(base_log libglog.a)

ENDIF(GLOG_FOUND)