CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET (CMAKE_CXX_STANDARD 11)

AUX_SOURCE_DIRECTORY(./ SRC)
ADD_LIBRARY(base_log STATIC ${SRC})

# IF(Boost_FOUND)

#     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
#     LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

#     TARGET_LINK_LIBRARIES(base_log ${Boost_LIBRARIES})

# ELSE(Boost_FOUND)

#     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../boost/log/include)
#     LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../boost/log/lib)

#     TARGET_LINK_LIBRARIES(base_log libboost_log_setup.a libboost_log.a libboost_thread.a libboost_filesystem.a)

# ENDIF(Boost_FOUND)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../glog/)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../gflags/)

TARGET_LINK_LIBRARIES(base_log glog gflags)

